# ops-manual-rag-assistant

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: auth.py  config.py  logging.py
app/ingestion/: __init__.py  chunker.py  extractors.py  pipeline.py  tagging.py
app/models/: records.py
app/retrieval/: __init__.py  index_builder.py  service.py  tokenizer.py
app/services/: answering.py  case_views.py  library.py  library_bundle.py  llm_rewriter.py  manual_views.py  runtime_cache.py
app/static/: app.css
app/templates/: base.html  case_detail.html  dashboard.html  library.html  login.html  manual_detail.html  not_found.html  search.html  timeline.html  topic_detail.html  topics.html
app/web/: routes.py
data/manifests/: seed_documents.json
data/raw/demo/: patrol_assistant_case.txt  video_platform_login_case.txt  video_platform_manual.txt  vulnerability_followup_case.txt
deploy/: docker-compose.yml
deploy/systemd/: ops-manual-rag-assistant.service
docs/: 3分钟演示脚本与录屏顺序.md  共享部署与迁移手册.md  实机联调报告.md  当前阶段代码审查与修复说明.md  政企运维知识操作手册.md  最终简历替换文本.md  本机全功能测试报告.md  本机联调记录.md  测试报告.md  演示问题库.md  简历项目描述与面试讲稿.md  落地验收报告.md  部署与运维手册.md  阶段7开发汇总.md  项目进度汇报.md
scripts/: build_retrieval_indexes.py  ingest_documents.py  manage_library.py  migrate_library_bundle.py  rebuild_indexes.sh  run_acceptance_checks.py  run_local_machine_validation.py  start_local.sh  start_shared.sh
tests/: test_api_regression.py  test_library_workflow.py
